--- a/tutorial/Week-6/notebook.ipynb
+++ b/tutorial/Week-6/notebook.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b3973567-5159-4e06-9a12-6ed69cb77cef",
    "metadata": {},
    "outputs": [],
@@ -112,10 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "71566743-14a9-4c61-9cfb-156c973f8639",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thank you very much. Thank you. Thank you. I stand before you today to fulfill one of my highest and most important duties under the United States Constitution, the nomination of a Supreme Court Justice. This is my third such nomination. After Justice Gorsuch and Justice Kavanaugh. And it is a very proud moment, indeed. Over the past week, our nation has mourned the loss of a true American legend. Justice Ruth Bader Ginsburg was a legal giant and a pioneer for women. Her extraordinary life and l'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "transcription.text[:500]"
    ]
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "30d0df6c-390d-4cb1-9794-d8795e0b8f57",
    "metadata": {},
    "outputs": [],
@@ -251,10 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "88f48576-c5f9-46db-ae92-ed3085ad6168",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Transcription(text='體育署防溺水十招提醒你 不跳水 不落單 不吸氣 不疲累 不長時間浸泡水中 要暖身 要選擇合法地點 要注意氣象報告 要小心吸水落差變化大 不幸落水要冷靜會漂浮 學會防溺十招 讓你今年夏天樂悠遊 以上廣告由教育部提供')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "transcription_raw"
    ]
@@ -274,10 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3587450c-e007-447b-8b10-e8d3fcf90cc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Ministry of Health and Welfare's Water Prevention 10 Tips Don't jump into the water. Don't fall into the pool. Don't breathe in the water. Don't exhaust yourself. Don't soak in the water for too long. Warm up. Choose a legal location. Pay attention to the weather forecast. Be careful not to fall into the water. If you fall into the water, calm down. You'll float. Learn Water Prevention 10 Tips to help you have fun this summer. Advertisement provided by the Ministry of Education\n"
+     ]
+    }
+   ],
    "source": [
     "audio_file = open(\"tutorial/Week-6/教育部 學生水域安全 國語30秒.mp3\", \"rb\")\n",
     "translation = client.audio.translations.create(\n",
@@ -401,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "f29ac7ce-e1ca-4ec4-aeaf-649bbfae2751",
    "metadata": {},
    "outputs": [
@@ -409,7 +439,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_23524\\1893942023.py:17: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
+      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19132\\1893942023.py:17: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
       "  response.stream_to_file(speech_file_path)\n"
      ]
     }
@@ -436,31 +466,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "af02b6a0-a73a-495c-b2c7-ebee9c82d7e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div style=\"display: flex; justify-content: space-around;\">\n",
-       "    <div>\n",
-       "        <img src=\"https://upload.wikimedia.org/wikipedia/commons/9/97/Associate_Justice_Neil_Gorsuch_Official_Portrait.jpg\" height=\"900\" width=\"600\" />\n",
-       "    </div>\n",
-       "    <div>\n",
-       "        <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Associate_Justice_Brett_Kavanaugh_Official_Portrait.jpg/800px-Associate_Justice_Brett_Kavanaugh_Official_Portrait.jpg\" height=\"900\" width=\"600\" />\n",
-       "    </div>\n",
-       "</div>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
@@ -492,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "06743b51-7a48-48be-b723-f31ec73a5c73",
    "metadata": {},
    "outputs": [
@@ -542,10 +551,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "db390a0d-65f4-475e-a9b2-99cae28096d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入對話: 主廚，扇貝沒熟\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你在開玩笑嗎？扇貝沒熟就像是給我一盤生的垃圾！你要確保它們煮到完美的程度，外脆內嫩！再給我一次機會，讓我看看你怎麼處理這道菜！快點！\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入對話: 主廚，威靈頓牛排全熟\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "天啊！威靈頓牛排全熟？這簡直是對牛肉的侮辱！你知道這道菜的精髓是什麼嗎？外層酥脆，裡面要是粉紅色的！你要重新做一份，這次要好好把握火候！快點，別浪費我的時間！\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入對話: 來單挑阿\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "單挑？你以為這裡是遊樂場嗎？這是地獄廚房！如果你想挑戰我，首先得學會怎麼做出一盤完美的菜！來吧，給我看看你的實力！但記住，失敗可不是選項！\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入對話: quit\n"
+     ]
+    }
+   ],
    "source": [
     "chat_history = ChatMessageHistory()\n",
     "\n",
@@ -565,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "ba667e5e-093e-404a-84ca-ec704316353c",
    "metadata": {},
    "outputs": [],
@@ -584,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "40a7c7c2-cb8c-4478-8c93-ea016b6d0676",
    "metadata": {},
    "outputs": [],
@@ -601,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "fd482184-52aa-4245-aa84-cb51a1fbc271",
    "metadata": {},
    "outputs": [
@@ -609,17 +668,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_23524\\1466307542.py:10: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
+      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19132\\1466307542.py:10: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
       "  response.stream_to_file(speech_file_path)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'respond': '你在開玩笑嗎？這扇貝根本就沒熟！這樣的食物怎麼能上桌？快點，重新煮一遍，讓它變得完美！別讓我失望！', 'tts': None}"
+       "{'respond': '你在開玩笑嗎？這扇貝簡直是生的！你怎麼能這樣對待食材？快點，重新煮一遍，讓它熟透！這不是餐廳，這是地獄廚房！別再犯這種低級錯誤了！',\n",
+       " 'tts': None}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,10 +694,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4c739301-09c1-40d0-a6a3-3b1fbdc09a62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入對話: quit\n"
+     ]
+    }
+   ],
    "source": [
     "chat_history = ChatMessageHistory()\n",
     "\n",
@@ -649,10 +717,31 @@
     "               \"message\": chat_history.messages\n",
     "              })\n",
     "    \n",
-    "    print(answer.respond)\n",
+    "    print(answer['respond'])\n",
     "    \n",
     "    chat_history.add_user_message(question)\n",
-    "    chat_history.add_ai_message(answer.respond)"
+    "    chat_history.add_ai_message(answer['respond'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e52fa9e1-d9f4-47b0-8cab-0c6736318835",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'全熟的威靈頓牛排？你在開玩笑嗎？這道菜的精髓就是要保持肉質的嫩滑和多汁！你怎麼能把它做成這樣？快點，重新來過！把牛肉煎到中等熟度，然後包裹在酥皮裡，讓它在烤箱裡完美地烤熟！別再犯這種低級錯誤了！明白了嗎？'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer['respond']"
    ]
   },
   {
@@ -682,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "9c560317-ad8d-4f7a-9cbe-cc32446b4121",
    "metadata": {},
    "outputs": [],
@@ -709,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "7d170c4f-1a80-4e86-8f93-88b98d91895a",
    "metadata": {},
    "outputs": [],
@@ -742,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "30b5c167-c9b4-4c7a-9c15-0a970b2b6dd7",
    "metadata": {},
    "outputs": [],
@@ -759,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "95092c5c-6565-49ac-89d4-7b8a5e977d9d",
    "metadata": {},
    "outputs": [
@@ -767,7 +856,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_26376\\2517451138.py:12: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
+      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19132\\2517451138.py:12: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
       "  response.stream_to_file(speech_file_path)\n"
      ]
     }
