--- a/tutorial/Week-8/notebook.ipynb
+++ b/tutorial/Week-8/notebook.ipynb
@@ -64,6 +64,8 @@
    },
    "outputs": [],
    "source": [
+    "from openai import OpenAI\n",
+    "\n",
     "prompt = \"\"\"\n",
     "A Sumi-e style watercolor painting of mountains during sunset. The sky is depicted with bold splashes of orange, pink, and purple hues, \n",
     "blending and overlapping in a dynamic composition. The mountains are represented with expressive brushstrokes, emphasizing their majestic and serene presence. \n",
@@ -139,17 +141,13 @@
     "\n",
     "There are two types of prompt: \n",
     "\n",
-    "1. Tag: masterpiece, best quality, beautiful eyes, clear eyes, detailed eyes, Blue-eyes, 1girl, 20_old, full-body, break, smoking, break, high_color, blue-hair, beauty, black-boots,break, break, Flat vector art, Colorful art, white_shirt, simple_background, blue_background, Ink art,peeking out upper body,Eyes, d\n",
+    "1. Danbooru Tag: masterpiece, best quality, beautiful eyes, clear eyes, detailed eyes, Blue-eyes, 1girl, 20_old, full-body, break, smoking, break, high_color, blue-hair, beauty, black-boots,break, break, Flat vector art, Colorful art, white_shirt, simple_background, blue_background, Ink art, peeking out upper body, Eyes\n",
     "\n",
-    "2. Narutal language: A Sumi-e style watercolor painting of mountains during sunset. The sky is depicted with bold splashes of orange, pink, and purple hues, \n",
-    "blending and overlapping in a dynamic composition. The mountains are represented with expressive brushstrokes, emphasizing their majestic and serene presence. \n",
-    "The focus is on capturing the essence and mood of the scene rather than detailed realism. The overall effect is serene and contemplative, with a harmonious \n",
-    "balance of color and form.\n",
+    "2. Narutal language: A Sumi-e style watercolor painting of mountains during sunset. The sky is depicted with bold splashes of orange, pink, and purple hues, blending and overlapping in a dynamic composition. The mountains are represented with expressive brushstrokes,emphasizing their majestic and serene presence. The focus is on capturing the essence and mood of the scene rather than detailed realism. The overall effect is serene and contemplative, with a harmonious balance of color and form.\n",
     "\n",
     "As non-native English speakers, we find the natural language prompt challenging, even for native speakers, due to the inclusion of specialized terminologies and advanced vocabulary.\n",
     "\n",
     "由於涉及專業術語和高級詞彙，我們作為非母語英語使用者，發現這個自然語言提示對我們來說是具有挑戰性的，即使對母語使用者來說也是如此。\n",
-    "\n",
     "\n",
     "### 2. How to make it an LCEL?"
    ]
@@ -161,8 +159,8 @@
    "source": [
     "## Some websites for natural language prompt\n",
     "\n",
-    "- https://leonardo.ai/: An Image generation SAAS. A lot of works are created with natural language prompt. \n",
-    "- https://blog.mlq.ai/dalle-prompts/: Some tutorial about how to come up with a natural language prompt"
+    "- https://leonardo.ai/: An Image generation SaaS. A lot of works are created with natural language prompt. \n",
+    "- https://blog.mlq.ai/dalle-prompts/: Some tutorial about how to come up with a natural language prompt."
    ]
   },
   {
@@ -170,7 +168,7 @@
    "id": "73124c68-8452-4711-a72e-e097f6256d16",
    "metadata": {},
    "source": [
-    "### nl_prompt_generation"
+    "### Natural Language Prompt Generation"
    ]
   },
   {
