--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -405,7 +405,11 @@
     "\n",
     "chat_prompt = ChatPromptTemplate.from_messages([system_message,\n",
     "                                                 human_message\n",
-    "                                               ])"
+    "                                               ])\n",
+    "\n",
+    "prompt = chat_prompt.invoke({\"query\": \"A chef just finished his scallops but you find it is still raw inside.\"})\n",
+    "output = model.invoke(prompt)\n",
+    "translation_function(text=output.content)"
    ]
   },
   {
@@ -433,7 +437,8 @@
     "                                               ])\n",
     "\n",
     "prompt = chat_prompt.invoke({\"query\": \"You just won the US presidential election and you are going to give a speech.\"})\n",
-    "output = model.invoke(prompt)"
+    "output = model.invoke(prompt)\n",
+    "translation_function(text=output.content)"
    ]
   },
   {
@@ -1451,6 +1456,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4fd5083d-1969-459f-bb6f-a968a0feaeec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rank_bm25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6565204d-9d89-4413-8f4e-22762ebd8ea0",
    "metadata": {},
    "outputs": [],
@@ -1770,8 +1785,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "- bm25_retriever 返回五份\n",
-    "- wiki_retriever 返回兩份"
+    "# - bm25_retriever 返回五份\n",
+    "# - wiki_retriever 返回兩份"
    ]
   },
   {
@@ -1798,8 +1813,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "- bm25_retriever 返回十份\n",
-    "- wiki_retriever 返回兩份"
+    "# - bm25_retriever 返回十份\n",
+    "# - wiki_retriever 返回兩份"
    ]
   },
   {
@@ -1887,7 +1902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
