--- a/tutorial/LLM+Langchain/Week-3/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-3/notebook.ipynb
@@ -221,20 +221,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb3b91f1-b599-4893-81a5-c5cadfd7303b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# chain = chat_prompt|model|output_parser\n",
-    "\n",
-    "# chain_translation = {'recipe': chain}|prompt_translation|model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4af5f91f-dd49-4b08-adf4-17739c40dba4",
    "metadata": {
     "tags": []
@@ -408,7 +394,7 @@
    },
    "outputs": [],
    "source": [
-    "full_chain = {\"ingredients\": pipeline_1}|chat_prompt_template_2|model|structured_output_parser"
+    "pipeline_ = {\"ingredients\": pipeline_1}|chat_prompt_template_2|model|structured_output_parser"
    ]
   },
   {
@@ -420,7 +406,7 @@
    },
    "outputs": [],
    "source": [
-    "full_chain.invoke({\"query\": query, \"question\": question})"
+    "pipeline_.invoke({\"query\": query, \"question\": question})"
    ]
   },
   {
@@ -1273,6 +1259,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c9b5aab-a9d5-482a-9bbe-5bff77cee41e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(parsing_process(\"https://www.freelancer.com/u/divyadhakecha1\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a74bf02-61db-4b78-ba98-013ebc8f77eb",
    "metadata": {},
@@ -1328,7 +1324,7 @@
    },
    "outputs": [],
    "source": [
-    "resume_output = resume_pipeline.invoke(applicants[0])"
+    "resume_output = resume_pipeline.invoke(\"https://www.freelancer.com/u/divyadhakecha1\")"
    ]
   },
   {
@@ -1516,7 +1512,7 @@
    "source": [
     "# in principle, job description is known because as an HR, you should have that\n",
     "\n",
-    "e2e_chain.invoke({\"url\": applicants[0],\n",
+    "e2e_chain.invoke({\"url\": \"https://www.freelancer.com/u/divyadhakecha1\",\n",
     "                  \"job\": job_description})"
    ]
   },
@@ -2133,8 +2129,8 @@
     "    )\n",
     "\n",
     "    system_template = \"\"\"\n",
-    "                      You are an AI assistant assigned with a task of identifying the origin of cuisine based on the ingredients, \n",
-    "                      a few QUESTION - ANSWER pair will be provided in the following format:\n",
+    "                      You are an AI assistant assigned with a task of identifying the origin of cuisine based on \n",
+    "                      the ingredients, a few QUESTION - ANSWER pair will be provided in the following format:\n",
     "    \n",
     "                      human: <INGREDIENTS>\n",
     "                      ai: <ORIGIN>\n",
