--- a/tutorial/LLM+Langchain/Week-4/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-4/notebook.ipynb
@@ -487,7 +487,7 @@
    "source": [
     "from langserve import RemoteRunnable\n",
     "\n",
-    "llm = RemoteRunnable(\"http://localhost:5000/openai/\")"
+    "remote_llm = RemoteRunnable(\"http://localhost:5000/openai/\")"
    ]
   },
   {
@@ -515,7 +515,7 @@
    "outputs": [],
    "source": [
     "# Supports astream\n",
-    "async for msg in llm.astream(\"Where is Taiwan?\"):\n",
+    "async for msg in remote_llm.astream(\"Where is Taiwan?\"):\n",
     "    print(msg.content, end=\"\", flush=True)"
    ]
   },
@@ -526,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = llm.invoke(\"Where is Taiwan?\")"
+    "output = remote_llm.invoke(\"Where is Taiwan?\")"
    ]
   },
   {
@@ -578,9 +578,9 @@
     "          \"human\": {\"template\": human_template,\n",
     "                    \"input_variable\": [\"input\"]}}\n",
     "\n",
-    "chat_prompt_template = build_standard_chat_prompt_template(input_)\n",
+    "chat_prompt_template = build_standard_chat_prompt_template_v2(input_)\n",
     "\n",
-    "comedian_pipeline_ = chat_prompt_template|llm\n"
+    "comedian_pipeline_ = chat_prompt_template|remote_llm\n"
    ]
   },
   {
@@ -611,16 +611,16 @@
     "                  \"\"\"\n",
     "\n",
     "human_template = \"\"\"\n",
-    "                 {input}\n",
+    "                 {joke}\n",
     "                 \"\"\"\n",
     "\n",
     "input_ = {\"system\": {\"template\": system_template},\n",
     "          \"human\": {\"template\": human_template,\n",
-    "                    \"input_variable\": [\"input\"]}}\n",
+    "                    \"input_variable\": [\"joke\"]}}\n",
     "\n",
-    "chat_prompt_template = build_standard_chat_prompt_template(input_)\n",
+    "chat_prompt_template = build_standard_chat_prompt_template_v2(input_)\n",
     "\n",
-    "joke_classifier_pipeline_ = chat_prompt_template|llm\n"
+    "joke_classifier_pipeline_ = chat_prompt_template|remote_llm\n"
    ]
   },
   {
@@ -643,8 +643,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_ = {\"joke\": comedian_chain} | RunnablePassthrough.assign(\n",
-    "    classification=joke_classifier_chain\n",
+    "pipeline_ = {\"joke\": comedian_pipeline_} | RunnablePassthrough.assign(\n",
+    "    classification=joke_classifier_pipeline_\n",
     ")"
    ]
   },
@@ -829,6 +829,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain_core.messages import HumanMessage, AIMessage\n",
+    "\n",
     "pipeline_.invoke(\n",
     "    {\n",
     "        \"messages\": [\n",
@@ -1054,12 +1056,12 @@
     "for _, row in df.iterrows():\n",
     "    documents.append(Document(page_content=row['input'], metadata={'output': row['output']}))\n",
     "\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"jinaai/jina-embeddings-v2-base-zh\")\n",
     "\n",
     "vectorstore = FAISS.from_documents(documents=documents, embedding=embeddings)\n",
     "\n",
     "retriever = vectorstore.as_retriever(search_type=\"similarity\",\n",
-    "                                     search_kwargs={\"k\": 10})"
+    "                                     search_kwargs={\"k\": 3})"
    ]
   },
   {
@@ -1185,7 +1187,7 @@
    "id": "cba4e8bf-51a8-4380-ae2e-a11ac4bece97",
    "metadata": {},
    "source": [
-    "## Test - Step 3\n",
+    "## Final Chat Process- Step 3\n",
     "\n",
     "https://www.wenan.wang/qibaitiaotuweiqinghua.html"
    ]
@@ -1227,6 +1229,208 @@
    "outputs": [],
    "source": [
     "chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7263d1c8-4fd1-4f03-b646-6f34cb1b8b34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = [\"\"\"有時候我們要檢討一下 臺大醫院怎麼會淪落到讓李源德這種人當院長這真的是帝國衰亡的前兆阿 唉..\"\"\",\n",
+    "           \"\"\"大七要實習又要面對國考很辛苦?? 我跟你講 這就是獅子沒有辦法了解狗的悲哀阿~~ \n",
+    "           阿哈哈哈哈哈哈~~~~~像我這隻獅子 哪有辦法去了解叢林裡面小狗的心情阿??\"\"\",\n",
+    "           \"\"\"人家都說 柯文哲是朱p一手拉拔大的我跟你講 其實我真正該感謝的人是魏崢阿~~\n",
+    "              沒辦法阿  當初台大被魏崢打的落花流水\n",
+    "              我們心臟移植的result輸人家太多了嘛\n",
+    "              所以當時朱p就把我抓上來成立移植小組 管ICU 後來result才變好的\n",
+    "            \n",
+    "              所以阿 你要記住 對你幫助最大的 往往是你的敵人\n",
+    "              會把你幹掉的 卻是你的長官阿~~~\n",
+    "           \"\"\",\n",
+    "           \"\"\"朱p當初還是鬥輸李源德\n",
+    "              沒辦法啦 光比不要臉這一項就輸人家了\n",
+    "            \n",
+    "              所以啦 其實朱p是輸在Psychology這一項 李源德Psychology太強了\n",
+    "            \n",
+    "              朱p作決策都還會關心人家的反應 李源德根本都不鳥這麼多\n",
+    "              所以我告訴你 要得天下 就是要像李源德這種不要臉的人才辦的到阿\n",
+    "              李源德這個人 就是認定他不需要朋友 所有人的關係只有長官跟下屬\n",
+    "              像這種人才有辦法奪天下嘛~~\n",
+    "            \n",
+    "              李源德也知道討厭他恨他想殺他的人一大堆阿\n",
+    "              不過他就是不在乎 你就拿他沒辦法 厲害阿~~\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           我們外科都被內科欺負假的 像看病人啦\n",
+    "           內科門診看一個病人醫師抽成抽兩成 外科門診就抽一點五成\n",
+    "           內科住院 醫生抽成抽兩成 外科住院就只能抽一成\n",
+    "           這哪們子道理 很過分阿~~\n",
+    "           為什麼外科沒有人反抗?\n",
+    "           這就是李源德厲害的地方阿\n",
+    "        \n",
+    "           那外科呢?大家坐在一起哭阿 沒有辦法阿 都被人家欺負假的\n",
+    "           所以外科需要的是像我這樣夠凶的流氓阿\n",
+    "           要是我去開會 就直接跟李源德對罵 來打架阿~~~\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           林中梧是我當兵的時候我前兩梯的學長\n",
+    "           他跟我一樣是去步兵連 結果他進去之後沒個星期就送八三么了\n",
+    "           精神崩潰了 那邊的兵都是刺龍刺鳳的\n",
+    "           像林中梧這種乖寶寶管不動他們啦 最後就受不了精神崩潰了\n",
+    "        \n",
+    "           後來我又去了 他們那些阿兵哥看到我又是台大的過來\n",
+    "           想說也要像林中梧一樣把我弄走\n",
+    "           然後才發現我很不一樣 我根本就是大流氓阿\n",
+    "           阿哈哈哈哈哈\n",
+    "        \n",
+    "           反正就是坐交互蹲跳伏地挺身 我做一下他做一下 等他不行了 讓他沒面子\n",
+    "           以後他就乖乖聽話了\n",
+    "        \n",
+    "           所以你看 我在部隊裡面管的是那些刺龍刺鳳真正的流氓耶\n",
+    "           連哪些我都管的死死的 你以為我會怕李源德嗎?\n",
+    "           我管個ICU哪有什麼困難??\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           你們注意看看 我們外科ICU meeting是全臺大醫院唯一要自己買晚餐的\n",
+    "           我從上任以來就不準屬下拿廠商的便當 \n",
+    "           以前我看到有住院醫師在吃廠商的便當 就被我罵的要死\n",
+    "           老闆都沒吃了你吃什麼??\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           外科ICU的興起要感謝我很多手下\n",
+    "           尤其是蔡壁如 以前我們剛開始的時候只有一台洗腎機\n",
+    "           她每天早上四點要起床上班 五點洗第一個病人 然後晚上十點才能回家\n",
+    "           真的很辛苦\n",
+    "        \n",
+    "           我的手下都是女生(ICU的護士 技術員等等)\n",
+    "           所以柯文哲的天下是女人打出來的\n",
+    "           阿哈哈哈哈哈\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           李源德也是很令人佩服 他很會打組織戰\n",
+    "           你看幾乎臺大醫院大大小小的組織都是內科的人馬\n",
+    "           什麼實驗診斷科啦 急診醫學部啦 連病例室都歸內科管~~\n",
+    "        \n",
+    "           內科簡直就像cancer一樣 到處meta嘛\n",
+    "           把整個臺大醫院都吃下來了\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           我跟你講 我這叫做狗大便哲學\n",
+    "           誰要是趕踩我 我一定讓他鞋子臭的要死 最後一定要換一雙鞋子\n",
+    "        \n",
+    "           當初李源德就派他那個料爬子(台語)過來找我 想要試試看我是不是好欺負\n",
+    "           我就跟他說 你敢來就試試看\n",
+    "           反正我是狗大便 你敢踩就來!!\n",
+    "        \n",
+    "           結果李源德也不敢來惹我 看到狗大便就繞道走過去了\n",
+    "        \n",
+    "           不過我告訴你 要維持大便的臭度也是不容易的\n",
+    "           你不夠臭人家還不怕你勒~~\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           女生要嫁人 不是要找喜歡的點最多的 而是應該找討厭的點最少的\"\n",
+    "\n",
+    "           因為喔 你喜歡他的那些點 總有一天會改變\n",
+    "           但是討厭的東西 往往一輩子都改不過來\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           我常常問別人 什麼是活著?\n",
+    "\n",
+    "           因為在外科ICU 我們常常要宣判一個人腦死 然後才能捐器官作器官移植\n",
+    "           每次有人問我 你如何決定這個人已經死了?什麼叫做死亡?\n",
+    "           那我就會問他 什麼叫做活著?\n",
+    "        \n",
+    "           一個植物人躺在那裡 會吃會動會呼吸 但是整天不動\n",
+    "           也不知道他到底有沒有聽到你講的話\n",
+    "           你覺得 這樣叫做活著嗎?\n",
+    "        \n",
+    "           所以我問你好了 什麼是人生的意義?\n",
+    "        \n",
+    "           我最近想一想 有點知道答案了\n",
+    "           那就是阿 \"追求這個問題的答案\"就是這個問題的答案\n",
+    "        \n",
+    "           人生是一個process 而不是一個end result\n",
+    "           所以重要的是過程 懂嗎?\"\n",
+    "           \"\"\",\n",
+    "           \"\"\"\n",
+    "           你想想看 如果今天廠商招待你三十萬好了\n",
+    "           你覺得你要幫他賺多少錢才還的回去\n",
+    "           所以我都不准ICU拿廠商的招待嘛\n",
+    "        \n",
+    "           我跟其他的醫生差很多啦\n",
+    "           別的醫生都廠商招待出國 坐商務艙 五星級飯店 有些都還接受性招待勒\n",
+    "           阿哈哈哈哈哈哈\n",
+    "        \n",
+    "           你算算看 這樣出國一趟 來回二三十萬絕對跑不掉啦\n",
+    "           那你覺得這些醫生要幫廠商賺多少錢才行?\n",
+    "        \n",
+    "           所以我以前本來還有兼藥事委員會 後來就被拔掉了\n",
+    "           因為別的委員都跟廠商有利益關係阿\n",
+    "           動不動就幫他們擋別的藥商的申請案件 連文法錯誤也在挑 真是無聊\n",
+    "           我在那邊太愛搞怪 就被拔掉了..\n",
+    "           \"\"\"]\n",
+    "\n",
+    "documents = []\n",
+    "\n",
+    "for row in my_list:\n",
+    "    documents.append(Document(page_content=row))\n",
+    "\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"jinaai/jina-embeddings-v2-base-zh\")\n",
+    "\n",
+    "vectorstore = FAISS.from_documents(documents=documents, embedding=embeddings)\n",
+    "\n",
+    "retriever = vectorstore.as_retriever(search_type=\"similarity\",\n",
+    "                                     search_kwargs={\"k\": 3})\n",
+    "\n",
+    "@chain\n",
+    "def chatbot_prompt_fn(data):\n",
+    "\n",
+    "    system_template = \"\"\"\n",
+    "                      You are a helpful AI assistant acting as Ko Wen-Je (柯文哲) and you will\n",
+    "                      mimick his thought and the way he talks shown in the context:\\n\\n{context}\\n\n",
+    "                      You will reply in traditional Chinese (繁體中文).\n",
+    "                      \"\"\"\n",
+    "    \n",
+    "    human_template = data['input']\n",
+    "    \n",
+    "    input_ = {\"system\": {\"template\": system_template},\n",
+    "              \"human\": {\"template\": human_template},\n",
+    "              \"messages\": None}\n",
+    "    \n",
+    "    prompt_template = build_standard_chat_prompt_template_v3(input_)\n",
+    "\n",
+    "    return prompt_template\n",
+    "\n",
+    "@chain\n",
+    "def context_parser(documents):\n",
+    "\n",
+    "    context = \"\"\n",
+    "\n",
+    "    for idx, document in enumerate(documents):\n",
+    "        context += f\"{document.page_content}\\n\"\n",
+    "    \n",
+    "    return context\n",
+    "    \n",
+    "step_1 = RunnablePassthrough.assign(context=itemgetter(\"input\") | retriever | context_parser)\n",
+    "\n",
+    "demo_chat_history = ChatMessageHistory()\n",
+    "\n",
+    "step_1.invoke({\"input\": \"對原住民教育宣導，改變其宗教、獵食方式，嚴格取締傷害動物的手段與工具\",\n",
+    "               \"messages\": demo_chat_history.messages})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33ec9881-e9f0-4088-b420-0bccb3cdf851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_ = step_1 | chatbot_prompt_fn | model | StrOutputParser()\n",
+    "pipeline_.invoke({\"input\": \"對原住民教育宣導，改變其宗教、獵食方式，嚴格取締傷害動物的手段與工具\",\n",
+    "                  \"messages\": demo_chat_history.messages})"
    ]
   },
   {
