Update the week-1 tutorial

--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -460,7 +460,7 @@
    "outputs": [],
    "source": [
     "system_prompt = PromptTemplate(template=\"\"\"You are a helpful AI assistant \n",
-    "mimicking the act Donald Trump. The User you give you intruction and you will \n",
+    "mimicking the behavior of Donald Trump. The User will give you an intruction and you will \n",
     "do the best you can.\"\"\")\n",
     "system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
     "\n",
@@ -909,7 +909,8 @@
     "          \"human\": {\"template\": 'start: {start}; end: {end}',\n",
     "                    \"input_variable\": [\"start\", \"end\"]}}\n",
     "\n",
-    "my_chat_prompt_template = build_standard_chat_prompt_template(input_)"
+    "my_chat_prompt_template = build_standard_chat_prompt_template(input_)\n",
+    "print(my_chat_prompt_template)"
    ]
   },
   {
@@ -918,9 +919,7 @@
    "id": "60915871-3d19-40c2-af4f-0b9d1d8f7295",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "my_chat_prompt_template"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1005,8 +1004,9 @@
    "source": [
     "response_schemas = [\n",
     "        ResponseSchema(name=\"result\", \n",
-    "                       description=\"\"\"The result as a python list of \n",
-    "                                    python dictionaries\"\"\")\n",
+    "                       description=\"\"\"\n",
+    "                                   The result as a python list of \n",
+    "                                   python dictionaries\"\"\")\n",
     "    ]"
    ]
   },
@@ -1273,7 +1273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_parser.parse(output.content)"
+    "output_parser.parse(output.content)['result']"
    ]
   },
   {
@@ -1447,7 +1447,7 @@
    "id": "c624d704-eb6d-4546-a06f-5c8d1a040aa6",
    "metadata": {},
    "source": [
-    "#### Overall, you can try to anaylize the topic you are interested in and  decompose the topic to provide a better instruction to the model to improve the outcomes. In conlusion: you should know your shit."
+    "#### Overall, you can try to anaylize the topic you are interested in and  decompose the topic to provide a better instruction to the model to improve the outcomes. In conclusion: you should know your shit."
    ]
   },
   {
