update week-4 & week-5

--- a/tutorial/LLM+Langchain/Week-4/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-4/notebook.ipynb
@@ -257,7 +257,6 @@
     "        ResponseSchema(name=\"categories\", description=\"The predicted categories as a python list\")\n",
     "    ]\n",
     "\n",
-    "\n",
     "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
     "format_instructions = output_parser.get_format_instructions()\n",
     "\n",
@@ -270,6 +269,16 @@
     "chat_prompt_template = build_standard_chat_prompt_template_v2(input_)\n",
     "\n",
     "pipeline_ = chat_prompt_template|model|output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70dbca35-f2a2-4c3a-853f-f32109650c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_"
    ]
   },
   {
@@ -387,7 +396,7 @@
    "outputs": [],
    "source": [
     "output = pipeline_.invoke({\"report_1\": text,\n",
-    "                       \"report_2\": df.iloc[3]['Report 1.2']})\n",
+    "                           \"report_2\": df.iloc[3]['Report 1.2']})\n",
     "\n",
     "print(output['categories'])"
    ]
@@ -437,7 +446,7 @@
     "\n",
     "response = requests.post(\n",
     "    \"http://localhost:5000/openai/invoke\",\n",
-    "    json={'input': \"Where is Taiwan\"}\n",
+    "    json={'input': \"Where is Taiwan?\"}\n",
     ")"
    ]
   },
@@ -932,7 +941,7 @@
    "source": [
     "demo_chat_history = ChatMessageHistory()\n",
     "\n",
-    "demo_chat_history.add_user_message(\"Translate this sentence from English to  Chinese (繁體中文): I love programming.\")\n",
+    "demo_chat_history.add_user_message(\"Translate this sentence from English to Chinese (繁體中文): I love programming.\")\n",
     "\n",
     "demo_chat_history.add_ai_message(\"我愛程式設計.\")\n",
     "\n",
@@ -1084,7 +1093,7 @@
     "from langchain.prompts import PromptTemplate, HumanMessagePromptTemplate\n",
     "ChatPromptTemplate, SystemMessagePromptTemplate,  MessagesPlaceholder\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.runnables import chain, RunnablePassthrough\n",
+    "from langchain_core.runnables import chain, RunnablePassthrough, Runnable\n",
     "\n",
     "\n",
     "def build_standard_chat_prompt_template_v3(kwargs):\n",
@@ -1111,7 +1120,6 @@
     "    return chat_prompt\n",
     "\n",
     "\n",
-    "\n",
     "@chain\n",
     "def chatbot_prompt_fn(data):\n",
     "\n",
@@ -1130,6 +1138,14 @@
     "    \n",
     "    prompt_template = build_standard_chat_prompt_template_v3(input_)\n",
     "\n",
+    "    print(\"\\n***********************************\")\n",
+    "    print(prompt_template)\n",
+    "    print(\"\\n***********************************\")\n",
+    "\n",
+    "    # Whay\n",
+    "\n",
+    "    print(f\"{isinstance(prompt_template, Runnable)}\")\n",
+    "    \n",
     "    return prompt_template\n",
     "\n",
     "@chain\n",
@@ -1143,6 +1159,16 @@
     "    return context\n",
     "    \n",
     "step_1 = RunnablePassthrough.assign(context=itemgetter(\"input\") | retriever | context_parser)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2a00335-fe48-48e8-8a4b-a27a6391cc63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chatbot_prompt_fn.invoke({\"input\": \"Hello World\"})"
    ]
   },
   {
@@ -1168,6 +1194,25 @@
     "pipeline_ = step_1 | chatbot_prompt_fn\n",
     "pipeline_.invoke({\"input\": \"你有个超能力 我也有个超能力\",\n",
     "                  \"messages\": demo_chat_history.messages})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ec42658-6151-4699-92d5-e7bfbee8b99c",
+   "metadata": {},
+   "source": [
+    "# Why does it work?\n",
+    "\n",
+    "runnable.base line 4570\n",
+    "\n",
+    " If the output is a Runnable, invoke it\n",
+    "        if isinstance(output, Runnable):\n",
+    "            recursion_limit = config[\"recursion_limit\"]\n",
+    "            if recursion_limit <= 0:\n",
+    "                msg = (\n",
+    "                    f\"Recursion limit reached when invoking {self} with input {input}.\"\n",
+    "                )\n",
+    "                raise RecursionError(msg)"
    ]
   },
   {
@@ -1205,7 +1250,7 @@
     "chat_history = ChatMessageHistory()\n",
     "\n",
     "while True:\n",
-    "    question = input(\"Please input your question: \")\n",
+    "    question = input(\"Please input your question: (If you want end the conversation, please enter `QUIT`)\")\n",
     "\n",
     "    # if you want to quit\n",
     "    if question == \"QUIT\":\n",
@@ -1536,6 +1581,8 @@
     "chat_prompt_template = build_standard_chat_prompt_template_v2(input_)\n",
     "\n",
     "step_1 = RunnablePassthrough.assign(context=itemgetter(\"input\") | retriever | context_parser)\n",
+    "# If you want to use the standalone question as the query of your retrieval process:\n",
+    "# RunnablePassthrough.assign(context=itemgetter(\"standalone_question\") | retriever | context_parser)\n",
     "\n",
     "retrieval_pipeline = step_1|RunnablePassthrough.assign(answer=chat_prompt_template|model|StrOutputParser())"
    ]
