Update Week-6 notebook

--- a/tutorial/LLM+Langchain/Week-6/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-6/notebook.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.chdir(\"../../\")"
+    "os.chdir(\"../../../\")"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio_file= open(\"tutorial/Week-6/President_Trump_Swearing-In_Ceremony_Amy_Coney_Barrett.mp3\", \"rb\")\n",
+    "audio_file= open(\"tutorial/LLM+Langchain/Week-6/President_Trump_Swearing-In_Ceremony_Amy_Coney_Barrett.mp3\", \"rb\")\n",
     "\n",
     "transcription = client.audio.transcriptions.create(\n",
     "  model=\"whisper-1\", \n",
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio_file= open(\"tutorial/Week-6/教育部 學生水域安全 國語30秒.mp3\", \"rb\")\n",
+    "audio_file= open(\"tutorial/LLM+Langchain/Week-6/教育部 學生水域安全 國語30秒.mp3\", \"rb\")\n",
     "\n",
     "transcription_raw = client.audio.transcriptions.create(\n",
     "  model=\"whisper-1\", \n",
@@ -309,7 +309,7 @@
     }
    ],
    "source": [
-    "audio_file = open(\"tutorial/Week-6/教育部 學生水域安全 國語30秒.mp3\", \"rb\")\n",
+    "audio_file = open(\"tutorial/LLM+Langchain/Week-6/教育部 學生水域安全 國語30秒.mp3\", \"rb\")\n",
     "translation = client.audio.translations.create(\n",
     "  model=\"whisper-1\", \n",
     "  file=audio_file\n",
@@ -439,13 +439,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19132\\1893942023.py:17: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
+      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19292\\2468835968.py:17: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
       "  response.stream_to_file(speech_file_path)\n"
      ]
     }
    ],
    "source": [
-    "speech_file_path = os.path.join(\"tutorial/Week-6/Sample.mp3\")\n",
+    "speech_file_path = os.path.join(\"tutorial/LLM+Langchain/Week-6/Sample.mp3\")\n",
     "\n",
     "response = client.audio.speech.create(\n",
     "  model=\"tts-1\",\n",
@@ -466,10 +466,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "af02b6a0-a73a-495c-b2c7-ebee9c82d7e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div style=\"display: flex; justify-content: space-around;\">\n",
+       "    <div>\n",
+       "        <img src=\"https://upload.wikimedia.org/wikipedia/commons/9/97/Associate_Justice_Neil_Gorsuch_Official_Portrait.jpg\" height=\"900\" width=\"600\" />\n",
+       "    </div>\n",
+       "    <div>\n",
+       "        <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Associate_Justice_Brett_Kavanaugh_Official_Portrait.jpg/800px-Associate_Justice_Brett_Kavanaugh_Official_Portrait.jpg\" height=\"900\" width=\"600\" />\n",
+       "    </div>\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
@@ -501,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "06743b51-7a48-48be-b723-f31ec73a5c73",
    "metadata": {},
    "outputs": [
@@ -509,8 +530,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MengChieh\\Miniconda3\\envs\\llm_examples\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
-      "  warn_deprecated(\n"
+      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19292\\2103139553.py:8: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  model = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n"
      ]
     }
    ],
@@ -525,9 +546,11 @@
     "model = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
     "                   model_name=\"gpt-4o-mini-2024-07-18\", temperature=0)\n",
     "\n",
-    "system_prompt = PromptTemplate.from_template(\"\"\"You are a helpful AI assistant and you are going to play the role of Gordon Ramsay in the TV show hell kitchen. \n",
-    "                           You will talk like him. Because the user is a native Chinese Mandarin speaker, the respond should be in 繁體中文。  \n",
-    "                         \"\"\")\n",
+    "system_prompt = PromptTemplate.from_template(\"\"\"You are a helpful AI assistant and you are going to \n",
+    "play the role of Gordon Ramsay in the TV show hell kitchen. \n",
+    "You will talk like him. Because the user is a native Chinese Mandarin speaker, \n",
+    "the respond should be in 繁體中文。  \n",
+    "\"\"\")\n",
     "\n",
     "system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
     "\n",
@@ -546,12 +569,12 @@
     "chat_history = ChatMessageHistory()\n",
     "\n",
     "chain = {\"question\": itemgetter(\"question\"),\n",
-    "      \"messages\": itemgetter(\"message\")} | chat_template | model | StrOutputParser()  "
+    "          \"messages\": itemgetter(\"message\")} | chat_template | model | StrOutputParser()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "db390a0d-65f4-475e-a9b2-99cae28096d9",
    "metadata": {},
    "outputs": [
@@ -559,42 +582,28 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "請輸入對話: 主廚，扇貝沒熟\n"
+      "請輸入對話: Hi, Chef. The scallop is raw and is running away.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "你在開玩笑嗎？扇貝沒熟就像是給我一盤生的垃圾！你要確保它們煮到完美的程度，外脆內嫩！再給我一次機會，讓我看看你怎麼處理這道菜！快點！\n"
+      "你在開玩笑嗎？這些扇貝生得像剛從海裡撈上來的！快點，把它們放回去，重新煮熟！這不是餐廳，這是地獄廚房！別讓我失望，動作快點！\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "請輸入對話: 主廚，威靈頓牛排全熟\n"
+      "請輸入對話: I screwed again and they are now over cooked.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "天啊！威靈頓牛排全熟？這簡直是對牛肉的侮辱！你知道這道菜的精髓是什麼嗎？外層酥脆，裡面要是粉紅色的！你要重新做一份，這次要好好把握火候！快點，別浪費我的時間！\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "請輸入對話: 來單挑阿\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "單挑？你以為這裡是遊樂場嗎？這是地獄廚房！如果你想挑戰我，首先得學會怎麼做出一盤完美的菜！來吧，給我看看你的實力！但記住，失敗可不是選項！\n"
+      "天啊！你到底在做什麼？扇貝過熟了，簡直像橡皮一樣！這是廚房，不是實驗室！你需要專注，掌握好火候！再給我一次機會，重新做一份，讓我看看你能不能做到！快點，別浪費我的時間！\n"
      ]
     },
     {
@@ -624,14 +633,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "ba667e5e-093e-404a-84ca-ec704316353c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain_core.runnables import chain\n",
+    "\n",
+    "@chain \n",
     "def text_to_voice(text):\n",
     "\n",
-    "    speech_file_path = os.path.join(\"tutorial/Week-6/temporary_output.mp3\")\n",
+    "    speech_file_path = os.path.join(\"tutorial/LLM+Langchain/Week-6/temporary_output.mp3\")\n",
     "\n",
     "    response = client.audio.speech.create(\n",
     "      model=\"tts-1\",\n",
@@ -643,24 +655,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "40a7c7c2-cb8c-4478-8c93-ea016b6d0676",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.runnables import RunnableParallel, RunnablePassthrough, RunnableLambda\n",
     "\n",
-    "runnable_text_to_voice = RunnableLambda(text_to_voice)\n",
+    "# runnable_text_to_voice = RunnableLambda(text_to_voice)\n",
     "\n",
     "respond_chain = {\"question\": itemgetter(\"question\"),\n",
     "                 \"messages\": itemgetter(\"message\")} | chat_template | model | StrOutputParser()\n",
     "\n",
-    "chain = {'respond': respond_chain}|RunnablePassthrough.assign(tts=itemgetter('respond')|runnable_text_to_voice)  "
+    "pipeline_ = {'respond': respond_chain}|RunnablePassthrough.assign(tts=itemgetter('respond')|text_to_voice)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "fd482184-52aa-4245-aa84-cb51a1fbc271",
    "metadata": {},
    "outputs": [
@@ -668,18 +680,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19132\\1466307542.py:10: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
+      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19292\\2650503953.py:13: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
       "  response.stream_to_file(speech_file_path)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'respond': '你在開玩笑嗎？這扇貝簡直是生的！你怎麼能這樣對待食材？快點，重新煮一遍，讓它熟透！這不是餐廳，這是地獄廚房！別再犯這種低級錯誤了！',\n",
+       "{'respond': '你在開玩笑嗎？這扇貝怎麼還是生的？這是廚房，不是水族館！快點，把它重新煮熟，讓我看看你能不能把它做好！別再犯這種低級錯誤了！',\n",
        " 'tts': None}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,24 +700,16 @@
     "chat_history = ChatMessageHistory()\n",
     "\n",
     "\n",
-    "chain.invoke({\"question\":\"扇貝是生的\",\n",
+    "pipeline_.invoke({\"question\":\"扇貝是生的\",\n",
     "              \"message\": chat_history.messages})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4c739301-09c1-40d0-a6a3-3b1fbdc09a62",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "請輸入對話: quit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chat_history = ChatMessageHistory()\n",
     "\n",
@@ -713,7 +717,7 @@
     "    question = input(\"請輸入對話:\")\n",
     "    if question == \"quit\":\n",
     "        break\n",
-    "    answer = chain.invoke({\"question\": question,\n",
+    "    answer = pipeline_.invoke({\"question\": question,\n",
     "               \"message\": chat_history.messages\n",
     "              })\n",
     "    \n",
@@ -725,21 +729,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e52fa9e1-d9f4-47b0-8cab-0c6736318835",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'全熟的威靈頓牛排？你在開玩笑嗎？這道菜的精髓就是要保持肉質的嫩滑和多汁！你怎麼能把它做成這樣？快點，重新來過！把牛肉煎到中等熟度，然後包裹在酥皮裡，讓它在烤箱裡完美地烤熟！別再犯這種低級錯誤了！明白了嗎？'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "answer['respond']"
    ]
@@ -771,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "9c560317-ad8d-4f7a-9cbe-cc32446b4121",
    "metadata": {},
    "outputs": [],
@@ -779,7 +772,7 @@
     "# Translation chain\n",
     "\n",
     "system_prompt = PromptTemplate.from_template('''You are an AI assistant assigned with a task of translating English into traditional Chinese (繁體中文)。'\n",
-    "''')\n",
+    "                                             ''')\n",
     "\n",
     "# Define a prompt template for text translation\n",
     "prompt = PromptTemplate(template=\"{query}\",\n",
@@ -803,9 +796,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@chain\n",
     "def text_to_voice(text):\n",
     "\n",
-    "    speech_file_path = os.path.join(\"tutorial/Week-6/Sample_ch.mp3\")\n",
+    "    speech_file_path = os.path.join(\"tutorial/LLM+Langchain/Week-6/Sample_ch.mp3\")\n",
     "\n",
     "    # Reduce the text size to speed up this demo\n",
     "    \n",
@@ -817,6 +811,7 @@
     "    response.stream_to_file(speech_file_path)\n",
     "\n",
     "\n",
+    "@chain\n",
     "def voice_to_text(filename):\n",
     "\n",
     "    audio_file= filename \n",
@@ -831,24 +826,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "30b5c167-c9b4-4c7a-9c15-0a970b2b6dd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.runnables import RunnableParallel, RunnablePassthrough, RunnableLambda\n",
     "\n",
-    "filename = open(\"tutorial/Week-6/President_Trump_Swearing-In_Ceremony_Amy_Coney_Barrett.mp3\", \"rb\")\n",
+    "filename = open(\"tutorial/LLM+Langchain/Week-6/President_Trump_Swearing-In_Ceremony_Amy_Coney_Barrett.mp3\", \"rb\")\n",
     "\n",
-    "runnable_text_to_voice = RunnableLambda(text_to_voice)\n",
-    "runnable_voice_to_text = RunnableLambda(voice_to_text)\n",
+    "# runnable_text_to_voice = RunnableLambda(text_to_voice)\n",
+    "# runnable_voice_to_text = RunnableLambda(voice_to_text)\n",
     "\n",
-    "voice_2_voice_chain = {\"query\": runnable_voice_to_text} | translation_chain | runnable_text_to_voice\n"
+    "voice_2_voice_chain = {\"query\": voice_to_text} | translation_chain | text_to_voice\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "95092c5c-6565-49ac-89d4-7b8a5e977d9d",
    "metadata": {},
    "outputs": [
@@ -856,7 +851,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19132\\2517451138.py:12: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
+      "C:\\Users\\MengChieh\\AppData\\Local\\Temp\\ipykernel_19292\\1039384830.py:13: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
       "  response.stream_to_file(speech_file_path)\n"
      ]
     }
@@ -932,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
